<resources>
    <string name="app_name">PhotoRemover</string>
    <string name="service_event_title">Event service</string>
    <string name="service_event_description">Event service running</string>
    <string name="service_event_notification_channel_name">Event service</string>
    <string name="new_photo_notification">New photo notification</string>
    <string name="message_deletion_scheduled">Okay, deletion scheduled.</string>
    <string name="service_schedule_channel_id">Schedule service</string>
    <string name="service_schedule_description">Schedule service running</string>
    <string name="service_schedule_title">Schedule service</string>
    <string name="state_scheduled">Scheduled for deletion</string>
    <string name="state_error_file_not_found">File not found</string>
    <string name="state_error_file_not_writable">File not writable</string>
    <string name="state_error_deletion_failed">Deleting the file failed</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_title_notification">Notification</string>
    <string name="settings_title_new_photo_notification">\'New Photo\' notification timeout</string>
    <string name="duration_two_minutes">Two minutes</string>
    <string name="duration_fifteen_minutes">15 Minutes</string>
    <string name="duration_one_hour">One hour</string>
    <string name="duration_one_day">24 Hours</string>
    <string name="duration_no_timeout">No timeout</string>
    <string name="settings_title_settings">Settings</string>
    <string name="settings_title_delete_in_1">Delete in ... option 1</string>
    <string name="settings_title_delete_in_2">Delete in ... option 2</string>
    <string name="settings_title_delete_in_3">Delete in ... option 3</string>
    <string name="duration_two_hours">Two hours</string>
    <string name="duration_one_week">One wheek</string>
    <string name="duration_two_weeks">Two weeks</string>
    <string name="duration_one_month">One month</string>
    <string name="notification_delete_photo_in">Delete this Photo in...</string>
    <string name="date_format_days">%d days</string>
    <string name="date_format_days_hours">%d days, %d hours</string>
    <string name="date_format_hours">%d hours</string>
    <string name="date_format_hours_minutes">%d hours, %d minutes</string>
    <string name="date_format_minutes">%d minutes</string>
    <string name="date_format_seconds">%d seconds</string>
    <string name="menu_title_save_from_deletion">Save from deletion</string>
    <string name="menu_title_delete_now">Delete now</string>
    <string name="message_error_request_delete_permission">unable to request delete permission</string>
    <string name="message_error_deleting_photo">error deleting photo</string>
    <string name="message_error_missing_permission">requires storage permission in order to delete photos</string>
</resources>